[package]

name = "websocket"
version = "0.0.1"
authors = ["Konstantin Stepanov <me@kstep.me>"]

[lib]
name = "websocket"
path = "src/websocket/lib.rs"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl.git"

[dependencies.rust-crypto]
git = "https://github.com/DaGenix/rust-crypto.git"
