[package]

name = "bare-websocket"
version = "0.0.1"
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "Simple client only WebSocket (RFC6455) implementation with low level protocol details exposed (if needed)"
repository = "https://github.com/kstep/rust-websocket.git"
homepage = "https://github.com/kstep/rust-websocket"
readme = "README.md"

[lib]
name = "websocket"

[dependencies]
url = "*"
openssl = "*"
rustc-serialize = "*"

[dependencies.sha1]
git = "https://github.com/kstep/rust-sha1.git"
