[package]

name = "bare-websocket"
version = "0.0.6"
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "Simple client only WebSocket (RFC6455) implementation with low level protocol details exposed (if needed)"
repository = "https://github.com/kstep/rust-websocket.git"
homepage = "https://github.com/kstep/rust-websocket"
readme = "README.md"
license = "MIT"

[lib]
name = "websocket"

[dependencies]
url = "*"
openssl = "*"
rustc-serialize = "*"
sha1-hasher = "*"
bitflags = "*"
rand = "*"
